Update azure_pipeline.yaml for Azure Pipelines

--- a/azure_pipeline.yaml
+++ b/azure_pipeline.yaml
@@ -23,7 +23,7 @@ stages:
 
     - task: Docker@2
       inputs:
-        containerRegistry: 'dev-identity'
+        containerRegistry: 'acr-service-connection'
         repository: 'springbootapp'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
